# zkWallet

./: README.md  index.html  package.json
src/: router.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/common/components/Common/: Sidebar.tsx
src/common/constants/: navigation.ts
src/config/theme/foundation/: colors.ts
src/pages/WalletPage/: WalletPage.tsx
src/pages/WalletPage/components/: BoxAction.tsx  ButtonWithIcon.tsx  CreateWallet.tsx  index.ts
src/pages/WelcomePage/: WelcomePage.tsx
src/stores/: useAsteroidStore.ts
